--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
@@ -55,8 +55,8 @@ lecm-rpeditor_model.type.lecm-rpeditor_reportDescriptor.title=\u041E\u0442\u0447
 lecm-rpeditor_model.type.lecm-rpeditor_reportDescriptor.description=\u043E\u043F\u0438\u0441\u0430\u0442\u0435\u043B\u044C \u043E\u0442\u0447\u0435\u0442\u0430
 lecm-rpeditor_model.property.lecm-rpeditor_reportCode.title=\u041A\u043E\u0434
 lecm-rpeditor_model.property.lecm-rpeditor_reportCode.description=\u041A\u043E\u0434 \u043E\u0442\u0447\u0435\u0442\u0430
-lecm-rpeditor_model.property.lecm-rpeditor_reportDocType.title=\u0422\u0438\u043F \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u043E\u0432
-lecm-rpeditor_model.property.lecm-rpeditor_reportDocType.description=\u0422\u0438\u043F \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u043E\u0432
+lecm-rpeditor_model.property.lecm-rpeditor_reportDocType.title=\u0418\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u044C \u0434\u043B\u044F \u0442\u0438\u043F\u043E\u0432 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u043E\u0432
+lecm-rpeditor_model.property.lecm-rpeditor_reportDocType.description=\u0418\u0441\u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u044C \u0434\u043B\u044F \u0442\u0438\u043F\u043E\u0432 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u043E\u0432
 lecm-rpeditor_model.property.lecm-rpeditor_reportObjectsMultiplicity.title=\u041E\u0442\u0447\u0435\u0442 \u043F\u043E \u043A\u043E\u043B\u043B\u0435\u043A\u0446\u0438\u0438
 lecm-rpeditor_model.property.lecm-rpeditor_reportObjectsMultiplicity.description=\u041E\u0442\u0447\u0435\u0442 \u043F\u043E \u043A\u043E\u043B\u043B\u0435\u043A\u0446\u0438\u0438
 lecm-rpeditor_model.property.lecm-rpeditor_reportQuery.title=\u0422\u0435\u043A\u0441\u0442 \u0437\u0430\u043F\u0440\u043E\u0441\u0430
