--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-dictionaries-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-dictionaries-model_ru.properties
@@ -4,3 +4,5 @@ lecm-contract-dic_model.property.lecm-contract-dic_contract-type-description.tit
 lecm-contract-dic_model.property.lecm-contract-dic_contract-documents-type-code.title=\u041A\u043E\u0434
 lecm-contract-dic_model.property.lecm-contract-dic_delete-reason-code.title=\u041A\u043E\u0434
 lecm-contract-dic_model.property.lecm-contract-dic_reference-data-link.title=\u0421\u0441\u044B\u043B\u043A\u0430
+
+lecm-contract-dic_model.type.lecm-contract-dic_contract-documents-type.title=\u0412\u0438\u0434 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430 \u043A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443
