--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
@@ -56,3 +56,5 @@ lecm-stmeditor_model.property.lecm-stmeditor_archiveFolderAdditional.title=\u041
 lecm-stmeditor_model.property.lecm-stmeditor_version.title=\u0412\u0435\u0440\u0441\u0438\u044F
 lecm-stmeditor_model.property.lecm-stmeditor_publishDate.title=\u041E\u043F\u0443\u0431\u043B\u0438\u043A\u043E\u0432\u0430\u043D\u043E
 lecm-stmeditor_model.property.lecm-stmeditor_publishComment.title=\u041F\u0440\u0438\u043C\u0435\u0447\u0430\u043D\u0438\u044F
+lecm-stmeditor_model.property.lecm-stmeditor_alternativeExpression.title=\u0423\u0441\u043B\u043E\u0432\u0438\u0435
+lecm-stmeditor_model.association.lecm-stmeditor_alternativeStatus.title=\u0421\u0442\u0430\u0442\u0443\u0441
