--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
@@ -50,6 +50,8 @@ lecm-rpeditor_model.association.lecm-rpeditor_columnTypeAssoc.title=\u0422\u0438
 lecm-rpeditor_model.association.lecm-rpeditor_columnTypeAssoc.description=\u0422\u0438\u043F \u041F\u043E\u043B\u044F-\u043A\u043E\u043B\u043E\u043D\u043A\u0438\u0430
 lecm-rpeditor_model.association.lecm-rpeditor_columnParameterTypeAssoc.title=\u041F\u0430\u0440\u0430\u043C\u0435\u0442\u0440
 lecm-rpeditor_model.association.lecm-rpeditor_columnParameterTypeAssoc.description=\u0422\u0438\u043F \u043F\u0430\u0440\u0430\u043C\u0435\u0442\u0440\u0430 \u041F\u043E\u043B\u044F-\u043A\u043E\u043B\u043E\u043D\u043A\u0438
+lecm-rpeditor_model.property.lecm-rpeditor_dataColumnOrder.title=\u041F\u043E\u0440\u044F\u0434\u043E\u043A \u043D\u0430 \u0444\u043E\u0440\u043C\u0435
+lecm-rpeditor_model.property.lecm-rpeditor_dataColumnOrder.description=\u041F\u043E\u0440\u044F\u0434\u043E\u043A \u043D\u0430 \u0444\u043E\u0440\u043C\u0435
 
 lecm-rpeditor_model.type.lecm-rpeditor_reportDescriptor.title=\u041E\u0442\u0447\u0435\u0442
 lecm-rpeditor_model.type.lecm-rpeditor_reportDescriptor.description=\u043E\u043F\u0438\u0441\u0430\u0442\u0435\u043B\u044C \u043E\u0442\u0447\u0435\u0442\u0430
