--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
@@ -58,3 +58,6 @@ lecm-stmeditor_model.property.lecm-stmeditor_publishDate.title=\u041E\u043F\u044
 lecm-stmeditor_model.property.lecm-stmeditor_publishComment.title=\u041F\u0440\u0438\u043C\u0435\u0447\u0430\u043D\u0438\u044F
 lecm-stmeditor_model.property.lecm-stmeditor_alternativeExpression.title=\u0423\u0441\u043B\u043E\u0432\u0438\u0435
 lecm-stmeditor_model.association.lecm-stmeditor_alternativeStatus.title=\u0421\u0442\u0430\u0442\u0443\u0441
+lecm-stmeditor_model.property.lecm-stmeditor_isCreator.title=\u0421\u043E\u0437\u0434\u0430\u0442\u0435\u043B\u044C
+lecm-stmeditor_model.property.lecm-stmeditor_staticRolesList.title=\u0421\u0442\u0430\u0442\u0438\u0447\u0435\u0441\u043A\u0438\u0435 \u0440\u043E\u043B\u0438
+lecm-stmeditor_model.property.lecm-stmeditor_dynamicRolesList.title=\u0414\u0438\u043D\u0430\u043C\u0438\u0447\u0435\u0441\u043A\u0438\u0435 \u0440\u043E\u043B\u0438
