--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model_ru.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model_ru.properties
@@ -30,6 +30,8 @@ lecm-errands_model.property.lecm-errands_is-expired.title=\u041F\u0440\u043E\u04
 lecm-errands_model.property.lecm-errands_is-expired.description=\u041F\u0440\u043E\u0441\u0440\u043E\u0447\u0435\u043D\u043E
 lecm-errands_model.property.lecm-errands_is-short.title=\u041A\u043E\u0440\u043E\u0442\u043A\u043E\u0435
 lecm-errands_model.property.lecm-errands_is-short.description=\u041A\u043E\u0440\u043E\u0442\u043A\u043E\u0435
+lecm-errands_model.property.lecm-errands_base-doc-number.title=\u041D\u043E\u043C\u0435\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430-\u043E\u0441\u043D\u043E\u0432\u0430\u043D\u0438\u044F
+lecm-errands_model.property.lecm-errands_base-doc-number.description=\u041D\u043E\u043C\u0435\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430-\u043E\u0441\u043D\u043E\u0432\u0430\u043D\u0438\u044F
 
 lecm-errands_model.association.lecm-errands_initiator-assoc.title=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
 lecm-errands_model.association.lecm-errands_initiator-assoc.description=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
