--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/errands.list.get_ru.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/errands.list.get_ru.properties
@@ -1,5 +1,5 @@
-errandslist.label.my.errands=\u041C\u043E\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
-errandslist.label.issued.by.me=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F \u0432\u044B\u0434\u0430\u043D\u043D\u044B\u0435 \u043C\u043D\u043E\u0439
+errandslist.label.my-errands=\u041C\u043E\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
+errandslist.label.issued-by-me=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F \u0432\u044B\u0434\u0430\u043D\u043D\u044B\u0435 \u043C\u043D\u043E\u0439
 errandslist.label.status=\u0421\u0442\u0430\u0442\u0443\u0441
 errandslist.label.duedate=\u0421\u0440\u043E\u043A
 errandslist.label.after=\u0421\u041A\u041E\u0420\u041E
