--- a/lecm-signed-docflow/repo/src/main/config/messages/signed-docflow_ru.properties
+++ b/lecm-signed-docflow/repo/src/main/config/messages/signed-docflow_ru.properties
@@ -1,2 +1,4 @@
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_operator-code.title=\u041a\u043e\u0434 \u0441\u043f\u0435\u0446. \u043e\u043f\u0435\u0440\u0430\u0442\u043e\u0440\u0430 \u042d\u0414\u041e
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_partner-key.title=\u0418\u0434\u0435\u043d\u0442\u0438\u0444\u0438\u043a\u0430\u0442\u043e\u0440 \u043f\u0430\u0440\u0442\u043d\u0435\u0440\u0441\u043a\u043e\u0439 \u0441\u0438\u0441\u0442\u0435\u043c\u044b
+lecm-signed-docflow_signed-docflow.aspect.lecm-signed-docflow_signable.title=\u0423\u0447\u0430\u0441\u0442\u0432\u0443\u0435\u0442 \u0432 \u042e\u0417\u0414
+
