--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow_ru.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow_ru.properties
@@ -18,3 +18,7 @@ listconstraint.lecmErrandWf_requestCancelTaskResultConstraint.CANCEL_ERRAND=\u04
 listconstraint.lecmErrandWf_requestCancelTaskResultConstraint.CHANGE_EXECUTOR=\u0421\u043C\u0435\u043D\u0438\u0442\u044C \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044F
 lecmErrandWf_model.property.lecmErrandWf_requestCancelTaskReason.title=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F, \u0443\u043A\u0430\u0437\u0430\u043D\u043D\u0430\u044F \u0418\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u0435\u043C
 lecmErrandWf_model.association.lecmErrandWf_requestCancelTaskNewExecutor.title=\u041D\u043E\u0432\u044B\u0439 \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C
+
+lecmErrandWf_model.property.lecmErrandWf_changeExecutorReason.title=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0441\u043C\u0435\u043D\u044B \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044F
+lecmErrandWf_model.association.lecmErrandWf_changeExecutorCurrentExecutor.title=\u0422\u0435\u043A\u0443\u0449\u0438\u0439 \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C
+lecmErrandWf_model.association.lecmErrandWf_changeExecutorNewExecutor.title=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u043D\u043E\u0432\u043E\u0433\u043E \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044F
