--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/errands.list.get_ru.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/errands.list.get_ru.properties
@@ -8,6 +8,7 @@ errandslist.label.overdue=\u041F\u0420\u041E\u0421\u0420\u041E\u0427\u0415\u041D
 errandslist.label.important=\u0412\u0430\u0436\u043D\u043E\u0435
 errandslist.label.executor=\u0418\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C
 errandslist.label.initiator=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
+errandslist.label.no-errands=\u043D\u0435\u0442 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0439
 
 
 errandslist.option.all=\u0412\u0441\u0435
