--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/tasks.list.get_ru.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/tasks.list.get_ru.properties
@@ -2,6 +2,7 @@ tasklist.label.mytasks=\u041C\u043E\u0438 \u0437\u0430\u0434\u0430\u0447\u0438
 tasklist.label.subordinatestasks=\u0417\u0430\u0434\u0430\u0447\u0438 \u043F\u043E\u0434\u0447\u0438\u043D\u0435\u043D\u043D\u044B\u0445
 tasklist.label.status=\u0421\u0442\u0430\u0442\u0443\u0441
 tasklist.label.duedate=\u0421\u0440\u043E\u043A
+tasklist.label.no-tasks=\u043D\u0435\u0442 \u0437\u0430\u0434\u0430\u0447
 
 tasklist.option.all=\u0412\u0441\u0435
 tasklist.option.active=\u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0435
