--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form_ru.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form_ru.properties
@@ -21,3 +21,5 @@ label.save-draft=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0447\u
 page.errands-reports=\u041E\u0442\u0447\u0435\u0442\u044B \u043F\u043E \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F\u043C
 
 errands.number=\u041D\u043E\u043C\u0435\u0440
+
+field.changeExecutorCurrentExecutor.title=\u0422\u0435\u043A\u0443\u0449\u0438\u0439 \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C
