--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow_ru.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow_ru.properties
@@ -21,3 +21,5 @@ lecmErrandWf_model.association.lecmErrandWf_requestCancelTaskNewExecutor.title=\
 
 lecmErrandWf_model.property.lecmErrandWf_changeExecutorReason.title=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0441\u043C\u0435\u043D\u044B \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044F
 lecmErrandWf_model.association.lecmErrandWf_changeExecutorNewExecutor.title=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u043D\u043E\u0432\u043E\u0433\u043E \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044F
+
+lecmErrandWf_model.property.lecmErrandWf_cancelReason.title=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u043E\u0442\u043C\u0435\u043D\u044B
