--- a/lecm-semantic-assist/share/src/main/resources/alfresco/web-extension/ru/it/lecm/br5/semantic/form_ru.properties
+++ b/lecm-semantic-assist/share/src/main/resources/alfresco/web-extension/ru/it/lecm/br5/semantic/form_ru.properties
@@ -11,4 +11,4 @@ message.modifiedby = \u0418\u0437\u043c\u0435\u043d\u0435\u043d
 message.modifiedon = \u0414\u0430\u0442\u0430 \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u044f
 page.semantic.expert.term.title = \u041e\u0431\u043b\u0430\u043a\u043e \u0442\u0435\u0440\u043c\u043e\u0432 \u044d\u043a\u0441\u043f\u0435\u0440\u0442\u0430
 page.semantic.expert.term.description = \u041e\u0431\u043b\u0430\u043a\u043e \u0442\u0435\u0440\u043c\u043e\u0432 \u044d\u043a\u0441\u043f\u0435\u0440\u0442\u0430
-button.expert.terms.cloud.text = \u041e\u0431\u043b\u0430\u043a\u043e\u0432 \u0442\u0435\u0440\u043c\u043e\u0432
+button.expert.terms.cloud.text = \u041e\u0431\u043b\u0430\u043a\u043e \u0442\u0435\u0440\u043c\u043e\u0432
