--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form_ru.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form_ru.properties
@@ -23,3 +23,4 @@ page.errands-reports=\u041E\u0442\u0447\u0435\u0442\u044B \u043F\u043E \u043F\u0
 errands.number=\u041D\u043E\u043C\u0435\u0440
 
 field.changeExecutorCurrentExecutor.title=\u0422\u0435\u043A\u0443\u0449\u0438\u0439 \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C
+field.changeControllerCurrentController.title=\u0422\u0435\u043A\u0443\u0449\u0438\u0439 \u043A\u043E\u043D\u0442\u0440\u043E\u043B\u043B\u0435\u0440
