--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow_ru.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow_ru.properties
@@ -22,7 +22,7 @@ lecmErrandWf_model.association.lecmErrandWf_requestCancelTaskNewExecutor.title=\
 lecmErrandWf_model.property.lecmErrandWf_changeExecutorReason.title=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0441\u043C\u0435\u043D\u044B \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044F
 lecmErrandWf_model.association.lecmErrandWf_changeExecutorNewExecutor.title=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u043D\u043E\u0432\u043E\u0433\u043E \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044F
 
-lecmErrandWf_model.property.lecmErrandWf_cancelReason.title=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u043E\u0442\u043C\u0435\u043D\u044BlecmErrandWf_model.association.lecmErrandWf_changeExecutorNewExecutor.title=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u043D\u043E\u0432\u043E\u0433\u043E \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044F
+lecmErrandWf_model.property.lecmErrandWf_cancelReason.title=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u043E\u0442\u043C\u0435\u043D\u044B
 
 lecmErrandWf_model.property.lecmErrandWf_changeControllerReason.title=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0441\u043C\u0435\u043D\u044B \u043A\u043E\u043D\u0442\u0440\u043E\u043B\u043B\u0435\u0440\u0430
 lecmErrandWf_model.association.lecmErrandWf_changeControllerNewController.title=\u041D\u043E\u0432\u044B\u0439 \u043A\u043E\u043D\u0442\u0440\u043E\u043B\u043B\u0435\u0440
