--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
@@ -1,6 +1,6 @@
 lecm-stmeditor_model.association.lecm-stmeditor_transitionStatus.title=\u0421\u0442\u0430\u0442\u0443\u0441
 lecm-stmeditor_model.property.lecm-stmeditor_transitionExpression.title=\u0412\u044B\u0440\u0430\u0436\u0435\u043D\u0438\u0435
-lecm-stmeditor_model.property.lecm-stmeditor_transitionLabel.title=\u0418\u043C\u044F \u043F\u0435\u0440\u0435\u0445\u043E\u0434\u0430
+lecm-stmeditor_model.property.lecm-stmeditor_transitionLabel.title=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
 
 lecm-stmeditor_model.property.lecm-stmeditor_inputToValue.title=\u0418\u043C\u044F \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u043E\u0439
 lecm-stmeditor_model.property.lecm-stmeditor_inputFromType.title=\u0422\u0438\u043F
@@ -61,3 +61,7 @@ lecm-stmeditor_model.association.lecm-stmeditor_alternativeStatus.title=\u0421\u
 lecm-stmeditor_model.property.lecm-stmeditor_isCreator.title=\u0421\u043E\u0437\u0434\u0430\u0442\u0435\u043B\u044C
 lecm-stmeditor_model.property.lecm-stmeditor_staticRolesList.title=\u0421\u0442\u0430\u0442\u0438\u0447\u0435\u0441\u043A\u0438\u0435 \u0440\u043E\u043B\u0438
 lecm-stmeditor_model.property.lecm-stmeditor_dynamicRolesList.title=\u0414\u0438\u043D\u0430\u043C\u0438\u0447\u0435\u0441\u043A\u0438\u0435 \u0440\u043E\u043B\u0438
+lecm-stmeditor_model.property.lecm-stmeditor_takeFinishStateWithTransitionForm.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+lecm-stmeditor_model.property.lecm-stmeditor_takeFinishStateWithTransitionFormTrans.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430 \u0438 \u043F\u0435\u0440\u0435\u0445\u043E\u0434 \u0432 \u0441\u0442\u0430\u0442\u0443\u0441
+lecm-stmeditor_model.property.lecm-stmeditor_transitionFormFolder.title=\u0414\u0438\u0440\u0435\u043A\u0442\u043E\u0440\u0438\u044F \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+lecm-stmeditor_model.property.lecm-stmeditor_transitionFormType.title=\u0422\u0438\u043F \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
