--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/components/form.get_ru.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/components/form.get_ru.properties
@@ -1,3 +1,22 @@
+message.eddand.fromEmployee =\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0435 \u0434\u0430\u043B
+message.eddand.toEmployee=\u0441\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A\u0443
+
+message.eddand.onBasis=\u041D\u0430 \u043E\u0441\u043D\u043E\u0432\u0430\u043D\u0438\u0438 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+
+message.eddand.limitationDate=\u0421\u0440\u043E\u043A \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u044F
+message.eddand.justInTime=\u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u044C <span>\u0422\u043E\u0447\u043D\u043E \u0432 \u0441\u0440\u043E\u043A</span>
+
+message.eddand.attachments=\u0412\u043B\u043E\u0436\u0435\u043D\u0438\u044F
+
+message.eddand.coexecutors=\u0421\u043E\u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u0438
+
+message.eddand.work=\u0420\u0430\u0431\u043E\u0442\u0430 \u043D\u0430\u0434 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0435\u043C
+
+message.eddand.executionControl=\u041A\u043E\u043D\u0442\u0440\u043E\u043B\u044C \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u044F
+
+message.eddand.childErrands=\u0414\u043E\u0447\u0435\u0440\u043D\u0438\u0435 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
+message.eddand.addChildErrands=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0435
+
 message.links.add.success=\u0421\u0441\u044B\u043B\u043A\u0430 \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u0434\u043E\u0431\u0430\u0432\u043B\u0435\u043D\u0430
 message.links.add.failure=\u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u0441\u043E\u0437\u0434\u0430\u0442\u044C \u0441\u0441\u044B\u043B\u043A\u0443
 
