--- a/lecm-signed-docflow/repo/src/main/config/messages/signed-docflow_ru.properties
+++ b/lecm-signed-docflow/repo/src/main/config/messages/signed-docflow_ru.properties
@@ -1,19 +1,18 @@
-lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_operator-code.title=\u041A\u043E\u0434 \u0441\u043F\u0435\u0446. \u043E\u043F\u0435\u0440\u0430\u0442\u043E\u0440\u0430 \u042D\u0414\u041E
-lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_partner-key.title=\u0418\u0434\u0435\u043D\u0442\u0438\u0444\u0438\u043A\u0430\u0442\u043E\u0440 \u043F\u0430\u0440\u0442\u043D\u0435\u0440\u0441\u043A\u043E\u0439 \u0441\u0438\u0441\u0442\u0435\u043C\u044B
-lecm-signed-docflow_signed-docflow.aspect.lecm-signed-docflow_signable.title=\u0423\u0447\u0430\u0441\u0442\u0432\u0443\u0435\u0442 \u0432 \u042E\u0417\u0414
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_operator-code.title=\u041a\u043e\u0434 \u0441\u043f\u0435\u0446. \u043e\u043f\u0435\u0440\u0430\u0442\u043e\u0440\u0430 \u042d\u0414\u041e
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_partner-key.title=\u0418\u0434\u0435\u043d\u0442\u0438\u0444\u0438\u043a\u0430\u0442\u043e\u0440 \u043f\u0430\u0440\u0442\u043d\u0435\u0440\u0441\u043a\u043e\u0439 \u0441\u0438\u0441\u0442\u0435\u043c\u044b
+lecm-signed-docflow_signed-docflow.aspect.lecm-signed-docflow_signable.title=\u0423\u0447\u0430\u0441\u0442\u0432\u0443\u0435\u0442 \u0432 \u042e\u0417\u0414
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_applet-key.title=\u041a\u043b\u044e\u0447 \u043b\u0438\u0446\u0435\u043d\u0437\u0438\u0438 \u0434\u043b\u044f \u043a\u0440\u0438\u043f\u0442\u043e \u0430\u043f\u043f\u043b\u0435\u0442\u0430
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_applet-cert.title=\u0421\u0435\u0440\u0442\u0438\u0444\u0438\u043a\u0430\u0442 \u0432\u044b\u0434\u0430\u0432\u0448\u0435\u0433\u043e \u043b\u0438\u0446\u0435\u043d\u0437\u0438\u044e \u0434\u043b\u044f \u043a\u0440\u0438\u043f\u0442\u043e \u0430\u043f\u043f\u043b\u0435\u0442\u0430
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_applet-container.title=\u041a\u043e\u043d\u0442\u0435\u0439\u043d\u0435\u0440, \u0433\u0434\u0435 \u043b\u0435\u0436\u0438\u0442 \u0441\u0435\u0440\u0442\u0438\u0444\u0438\u043a\u0430\u0442, \u043d\u0430 \u043a\u043e\u0442\u043e\u0440\u044b\u0439 \u043e\u0444\u043e\u0440\u043c\u043b\u0435\u043d\u0430 \u043b\u0438\u0446\u0435\u043d\u0437\u0438\u044f
 
-lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_owner.title=\u0412\u043B\u0430\u0434\u0435\u043B\u0435\u0446
-lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_owner-position.title=\u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u044C
-lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_owner-organization.title=\u041E\u0440\u0433\u0430\u043D\u0438\u0437\u0430\u0446\u0438\u044F
-lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_signing-date.title=\u0414\u0430\u0442\u0430 \u043F\u043E\u0434\u043F\u0438\u0441\u0430\u043D\u0438\u044F
-lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_serial-number.title=\u0421\u0435\u0440\u0438\u0439\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440
-lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_valid-from.title=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u0430 \u0441
-lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_valid-through.title=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u0430 \u043F\u043E
-lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_ca.title=\u0423\u0434\u043E\u0441\u0442\u043E\u0432\u0435\u0440\u044F\u044E\u0449\u0438\u0439 \u0446\u0435\u043D\u0442\u0440
-lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_update-date.title=\u0414\u0430\u0442\u0430 \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u044F
-lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_is-valid.title=\u041F\u043E\u0434\u043F\u0438\u0441\u044C \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043B\u044C\u043D\u0430
-lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_is-our.title=\u041D\u0430\u0448\u0430 \u043E\u0440\u0433\u0430\u043D\u0438\u0437\u0430\u0446\u0438\u044F
-lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_signature-content.title=\u041F\u043E\u0434\u043F\u0438\u0441\u044C
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_owner.title=\u0412\u043b\u0430\u0434\u0435\u043b\u0435\u0446
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_owner-position.title=\u0414\u043e\u043b\u0436\u043d\u043e\u0441\u0442\u044c
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_owner-organization.title=\u041e\u0440\u0433\u0430\u043d\u0438\u0437\u0430\u0446\u0438\u044f
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_signing-date.title=\u0414\u0430\u0442\u0430 \u043f\u043e\u0434\u043f\u0438\u0441\u0430\u043d\u0438\u044f
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_serial-number.title=\u0421\u0435\u0440\u0438\u0439\u043d\u044b\u0439 \u043d\u043e\u043c\u0435\u0440
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_valid-from.title=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043b\u044c\u043d\u0430 \u0441
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_valid-through.title=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043b\u044c\u043d\u0430 \u043f\u043e
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_ca.title=\u0423\u0434\u043e\u0441\u0442\u043e\u0432\u0435\u0440\u044f\u044e\u0449\u0438\u0439 \u0446\u0435\u043d\u0442\u0440
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_update-date.title=\u0414\u0430\u0442\u0430 \u043e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u044f
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_is-valid.title=\u041f\u043e\u0434\u043f\u0438\u0441\u044c \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0442\u0435\u043b\u044c\u043d\u0430
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_is-our.title=\u041d\u0430\u0448\u0430 \u043e\u0440\u0433\u0430\u043d\u0438\u0437\u0430\u0446\u0438\u044f
