--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/components/form.get_ru.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/components/form.get_ru.properties
@@ -1,6 +1,8 @@
 message.eddand.fromEmployee =\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0435 \u0434\u0430\u043B
 message.eddand.toEmployee=\u0441\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A\u0443
 
+message.eddand.employee.get=\u043F\u043E\u043B\u0443\u0447\u0438\u043B \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0435
+
 message.eddand.onBasis=\u041D\u0430 \u043E\u0441\u043D\u043E\u0432\u0430\u043D\u0438\u0438 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 
 message.eddand.limitationDate=\u0421\u0440\u043E\u043A \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u044F
