--- a/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/menu/contracts.menu.get_ru.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/menu/contracts.menu.get_ru.properties
@@ -2,3 +2,4 @@ lecm.contracts.main.btn=\u0413\u043B\u0430\u0432\u043D\u0430\u044F
 lecm.contracts.list.btn=\u0421\u043F\u0438\u0441\u043E\u043A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u043E\u0432
 lecm.contracts.documents.btn=\u0414\u043E\u043A-\u0442\u044B \u043A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430\u043C
 lecm.contracts.reports.btn=\u041E\u0442\u0447\u0435\u0442\u044B
+lecm.contracts.archive.btn=\u0410\u0440\u0445\u0438\u0432
