--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/dashlets/my-errands/my-errands.get_ru.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/dashlets/my-errands/my-errands.get_ru.properties
@@ -2,8 +2,22 @@ label.title=\u041C\u043E\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\
 label.load-failed=\u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u0437\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044C \u0441\u043F\u0438\u0441\u043E\u043A \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0439
 label.not-record=\u041D\u0435\u0442 \u0437\u0430\u043F\u0438\u0441\u0435\u0439
 
+local=ru
+
 label.from=\u043E\u0442
 label.up.to=\u0441\u0440\u043E\u043A \u0434\u043E
+label.date.month0=\u044F\u043D\u0432
+label.date.month1=\u0444\u0435\u0432
+label.date.month2=\u043C\u0430\u0440
+label.date.month3=\u0430\u043F\u0440
+label.date.month4=\u043C\u0430\u044F
+label.date.month5=\u0438\u044E\u043D
+label.date.month6=\u0438\u044E\u043B
+label.date.month7=\u0430\u0432\u0433
+label.date.month8=\u0441\u0435\u043D
+label.date.month9=\u043E\u043A\u0442
+label.date.month10=\u043D\u043E\u044F
+label.date.month11=\u0434\u0435\u043A
 
 label.important=\u0412\u0430\u0436\u043D\u043E\u0435
 label.is-expired=\u041F\u0420\u041E\u0421\u0420\u041E\u0427\u0415\u041D\u041E
