--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/diagram/errands-diagram.get_ru.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/diagram/errands-diagram.get_ru.properties
@@ -18,6 +18,9 @@ column.month9=\u041E\u043A\u0442\u044F\u0431\u0440\u044C
 column.month10=\u041D\u043E\u044F\u0431\u0440\u044C
 column.month11=\u0414\u0435\u043A\u0430\u0431\u0440\u044C
 
+pagination.template={CurrentPageReport}</span> &nbsp; {PreviousPageLink} {PageLinks} {NextPageLink}
+pagination.template.page-report={startRecord} - {endRecord} \u0438\u0437 {totalRecords}
+
 label.day=\u0434
 label.unknown=\u043D\u0435\u0438\u0437\u0432\u0435\u0441\u0442\u043D\u043E
 
