--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/diagram/errands-diagram.get_ru.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/diagram/errands-diagram.get_ru.properties
@@ -18,6 +18,11 @@ column.month9=\u041E\u043A\u0442\u044F\u0431\u0440\u044C
 column.month10=\u041D\u043E\u044F\u0431\u0440\u044C
 column.month11=\u0414\u0435\u043A\u0430\u0431\u0440\u044C
 
+label.is-expired=\u043F\u0440\u043E\u0441\u0440\u043E\u0447\u0435\u043D\u043D\u043E\u0435
+label.is-important=\u0432\u0430\u0436\u043D\u043E\u0435
+label.in-controler=\u043D\u0430 \u043A\u043E\u043D\u0442\u0440\u043E\u043B\u0435
+label.errand=\u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0435
+
 pagination.template={CurrentPageReport}</span> &nbsp; {PreviousPageLink} {PageLinks} {NextPageLink}
 pagination.template.page-report={startRecord} - {endRecord} \u0438\u0437 {totalRecords}
 
