--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/menu/menu.get_ru.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/menu/menu.get_ru.properties
@@ -1,4 +1,4 @@
 lecm.errands.list.btn=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
 lecm.errands.reports.btn=\u041E\u0442\u0447\u0435\u0442\u044B
-lecm.errands.tasks.btn=\u0417\u0430\u0434\u0430\u0447\u0438 \u043F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u044F
+lecm.errands.tasks.btn=\u041C\u043E\u043D\u0438\u0442\u043E\u0440
 lecm.errands.archive.btn=\u0410\u0440\u0445\u0438\u0432
