--- a/lecm-signed-docflow/repo/src/main/config/messages/signed-docflow_ru.properties
+++ b/lecm-signed-docflow/repo/src/main/config/messages/signed-docflow_ru.properties
@@ -6,6 +6,7 @@ lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_applet-cert.titl
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_applet-container.title=\u041a\u043e\u043d\u0442\u0435\u0439\u043d\u0435\u0440, \u0433\u0434\u0435 \u043b\u0435\u0436\u0438\u0442 \u0441\u0435\u0440\u0442\u0438\u0444\u0438\u043a\u0430\u0442, \u043d\u0430 \u043a\u043e\u0442\u043e\u0440\u044b\u0439 \u043e\u0444\u043e\u0440\u043c\u043b\u0435\u043d\u0430 \u043b\u0438\u0446\u0435\u043d\u0437\u0438\u044f
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_auth-type.title=\u0421\u043f\u043e\u0441\u043e\u0431 \u0445\u0440\u0430\u043d\u0435\u043d\u0438\u044f \u0441\u0435\u0440\u0442\u0438\u0444\u0438\u043a\u0430\u0442\u043e\u0432
 
+lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_name.title=\u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_owner.title=\u0412\u043b\u0430\u0434\u0435\u043b\u0435\u0446
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_owner-position.title=\u0414\u043e\u043b\u0436\u043d\u043e\u0441\u0442\u044c
 lecm-signed-docflow_signed-docflow.property.lecm-signed-docflow_owner-organization.title=\u041e\u0440\u0433\u0430\u043d\u0438\u0437\u0430\u0446\u0438\u044f
