--- a/lecm-approval/share/src/main/resources/alfresco/web-extension/ru/it/lecm/approval/form_ru.properties
+++ b/lecm-approval/share/src/main/resources/alfresco/web-extension/ru/it/lecm/approval/form_ru.properties
@@ -18,3 +18,4 @@ approvalList.report.success=\u041E\u0442\u0447\u0435\u0442 \u0441\u0444\u043E\u0
 approvalList.report.failure=\u041E\u0448\u0438\u0431\u043A\u0430 \u0444\u043E\u0440\u043C\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u044F \u043E\u0442\u0447\u0435\u0442\u0430
 field.comment.file=\u0424\u0430\u0439\u043B
 
+ru.it.approval.workflowDescription.message=\u0421\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u0435 \u043F\u043E \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0443
